# esp_server_remote

./: .gitignore  CMakeLists.txt  Makefile  README.md  log.txt  partitions.csv  sdkconfig  sdkconfig.old  tcp_test.py
components/button_handler/: CMakeLists.txt  button_handler.c  button_handler.h  cmd_button_handler.c
components/button_handler/cmd/: cmd_button_handler.c  cmd_button_handler.h
components/button_handler/inc/: button_handler.h  button_handler_shared.h  button_pad_handler.h  gpio_example_handler.h
components/button_handler/src/: button_handler.c  button_handler_shared.c  button_pad_handler.c  cmd_decl.h  gpio_example_handler.c
components/cmd_system/: CMakeLists.txt  cmd_ssh.c  cmd_system.c
components/periph/: CMakeLists.txt  cmd_periph.c  periph.c  periph.h
components/periph/cmd/: cmd_periph.c  cmd_periph.h
components/periph/inc/: button_gpio.h  button_pad.h  gpio_example.h  periph.h  periph_shared.h
components/periph/src/: button_gpio.c  button_pad.c  gpio_example.c  periph.c  periph_shared.c
components/ssh/: CMakeLists.txt  cmd_ssh.c  cmd_ssh.h  ssh.c  ssh.h
components/ssh_task/: CMakeLists.txt
components/ssh_task/inc/: ssh_task.h
components/ssh_task/src/: ssh_driver.c  ssh_task.c
main/: CMakeLists.txt  cmd_decl.h  connect.c  connect.h  display_helper.c  display_helper.h  input.c  input.h  main.c  msg_handler.c  msg_handler.h  ssh.c  ssh.h  terminal.c  terminal.h  wifi_event.c  wifi_event.h
main/snippets/: bt_wifi_main.c
python/: serial_tcp_rx.py  serial_tcp_tx.py  stdio_test.py  tcp_fuzz.py  tcp_test.py
ssh/: command.txt
